Fix dark mode td text color

--- a/_sass/dark-mode.scss
+++ b/_sass/dark-mode.scss
@@ -54,6 +54,10 @@
     background-color: #2a2a2a;
   }
 
+  tr:hover td {
+    color: #e0e0e0 !important;
+  }
+
   th {
     background-color: #1e1e1e !important;
     border-bottom-color: #bb86fc !important;
@@ -61,5 +65,6 @@
 
   td {
     border-bottom-color: #444 !important;
+    color: #e0e0e0 !important;
   }
 }
